--- a/package.json
+++ b/package.json
@@ -7,5 +7,31 @@
   "author": "Bhakti Mega Buana <bhaktibuana19@gmail.com>",
   "license": "MIT",
   "private": true,
-  "scripts": {}
+  "scripts": {
+    "build": "webpack",
+    "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register ./src/index.ts",
+    "start": "node -r tsconfig-paths/register ./dist/index.js"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^20.12.6",
+    "copy-webpack-plugin": "^12.0.2",
+    "ts-loader": "^9.5.1",
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.4.4",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "helmet": "^7.1.0",
+    "moment": "^2.30.1",
+    "mongoose": "^8.3.1"
+  }
 }
